	common_TabUnSelectedLeft.tiff
	common_TabUnSelectedRight.tiff: all tiffs needed to draw NSTabs.
	* Source/NSTabView.m: lots of work on drawing. Should draw correct
	in almost all cases. However, without event code I can't test it
	yet.
	* Source/NSTabViewItem.m: drawing. still need to move the drawing
	of the top line out of this and move it into NSTabView's drawRect.

1999-06-20  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSPopUpButton.m: hooked up all the actions and targets
	now works for popup, haven't finished pulldown yet.
	* Source/NSTabView.m: now draws the view correctly for all cases(?)
	* Source/NSTabViewItem.m: spits out correct values for string
	length, though more work is needed. No drawing, no events yet.

	NSPopUpButton now has basic functionality, ie. it works.

1999-06-19  Michael Hanni  <mhanni@sprintmail.com>

	* Images/common_Nibble.tiff: made inner gray area transparent.
	* Source/NSTabView.m: new file. implemented, save for drawing and
	event.
	* Source/NSTabViewItem.m: new file. implemented, save for drawing
	and event.

	TabView should be fun to get drawing. :-) I'm going to follow
Alfredo's lead by using a few drawn lines instead of bezier curves to draw
the tabs for now (since xgps doesn't do bezier).

1999-06-18  Michael Hanni  <mhanni@sprintmail.com>

	* Images/common_Nibble.tiff: new image for NSPopUpButton.
	* Source/NSPopUpButton.m: more changes. still using a subclass of
	NSMenuMatrix but had to hack new methods in to make selected_item 
	working in the Matrix.
	- drawRect: draws the correct item.
	- synchronizeTitleAndSelectedItem: now informs our
	NSPopUpButtonMatrix which one of its cells is "selected", i.e. on top.
	* Source/NSPopUpButtonCell.m: added new file. empty class, used in
	the backend currently.

1999-06-17  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSPopUpButton.m: half way implemented. Most still in
	backend, but that will change soon. PopUp and PullDown work,