@@ -291,6 +291,13 @@
   return nil;
 }
 
+- (NSView*) hitTest: (NSPoint)aPoint
+{}
+
+- (BOOL) mouse: (NSPoint)aPoint inRect: (NSRect)aRect
+{
+}
+
 // Coding.
 
 - (void) encodeWithCoder: (NSCoder*)aCoder
